@@ -4,14 +4,34 @@ function init(React){
 	var RecordPanel = React.createClass({displayName: "RecordPanel",
 		getInitialState : function(){
 			return {
-				list : []
+				list  : [],
+				filter: ""
 			};
 		},
 		render : function(){
-			var rowCollection = [];
+			var rowCollection = [],
+				filterStr     = this.state.filter,
+				filter        = filterStr;
+
+			//regexp
+			if(filterStr[0]=="/" && filterStr[filterStr.length-1]=="/"){
+				try{
+					filter = new RegExp(filterStr.substr(1,filterStr.length-2));
+				}catch(e){}
+			}
+
 			for(var i = this.state.list.length-1 ; i >=0 ; i--){
 				var item = this.state.list[i];
 				if(item){
+					if(filter && item){
+						try{
+							if(typeof filter == "object" && !filter.test(item.url)){
+								continue;
+							}else if(typeof filter == "string" && item.url.indexOf(filter) < 0){
+								continue;
+							}
+						}catch(e){}
+					}
 
 					if(item._justUpdated){
 						item._justUpdated = false;
